Проект ShareIt. Техническое задание. Часть 2 (выполнено)